[gd_scene load_steps=4 format=3 uid="uid://ctb8ou1xbsenx"]

[ext_resource type="Texture2D" uid="uid://x6gn7tmxvof3" path="res://Art/Misc/128 Versions/ground_shadow.png" id="1_q8q65"]
[ext_resource type="Script" path="res://Levels/plot.gd" id="2_42pap"]
[ext_resource type="PackedScene" uid="uid://gsod7h5ckeqo" path="res://Object/Plant.tscn" id="3_0t2sj"]

[node name="Plot" type="Sprite2D"]
process_mode = 1
texture = ExtResource("1_q8q65")
script = ExtResource("2_42pap")
PlantObject = ExtResource("3_0t2sj")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.008
offset_left = -64.0
offset_top = -65.0
offset_right = -64.0
offset_bottom = -64.024

[connection signal="focus_entered" from="Button" to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_button_focus_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
